tests/ui/failing/weird-exprs.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs`
error[E0557]: feature has been removed
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:3:12
  |
3 | #![feature(generators)]
  |            ^^^^^^^^^^ feature has been removed
  |
  = note: renamed to `coroutines`

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:57
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                                         ^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:51
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                                   ^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:45
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                             ^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:39
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:33
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:27
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:21
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:15
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:9
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:57
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                                         ^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error: `yield` can only be used in `#[coroutine]` closures, or `gen` blocks
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:57
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                                         ^^^^^
    |
help: use `#[coroutine]` to make this closure a coroutine
    |
155 |     #[coroutine] static || {
    |     ++++++++++++

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:51
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                                   ^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:45
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                             ^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:39
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:33
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:27
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:21
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:15
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/weird-exprs.rs:156:9
    |
156 |         yield yield yield yield yield yield yield yield yield;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
    = help: add `#![feature(coroutines)]` to the crate attributes to enable
    = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error: aborting due to 20 previous errors

Some errors have detailed explanations: E0557, E0658.
For more information about an error, try `rustc --explain E0557`.
